# sized-foldable

./: README.md  default.nix  shell.nix  sized-foldable.cabal  sized-foldable.nix
src/Data/: Sized.hs
