name:                sized-foldable
version:             0.1.1.0
synopsis:            Annotes foldables with their minimum and maximum size without performance impact
description:
            This library allows for compile time reasoning of the length of foldables without runtime impact.
            It knows for example, that if you take 2 of any list, the length of the resulting list will be between 0 and 2.
            Or it prevents you from calling last on a list which may be infinite.
license:             MIT
license-file:        LICENSE
author:              Florian Knupfer
maintainer:          fknupfer@gmail.com
copyright:           2016 Florian Knupfer
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Data.Sized
  build-depends:       base >= 4.9
                     , ghc-typelits-natnormalise
                     , ghc-typelits-extra
                     , ghc-typelits-knownnat
  hs-source-dirs:      src
  default-language:    Haskell2010